# This project ships a Home Assistant custom component under
# `custom_components/`, not an installable Python package. There is no
# `[build-system]`, so uv installs only the dependencies below and never tries
# to build the repo itself (`tool.uv.package = false` makes that explicit).

[project]
name = "helen-energy-consumption"
version = "1.0.1"
description = "Helen electricity consumption into Home Assistant statistics."
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
# Home Assistant depends on pre-release packages (e.g. aiohasupervisor beta),
# so the resolver must accept them. Scoped to this dev-only project.
prerelease = "allow"

# Dev-only dependencies (PEP 735). The `dev` group is synced by default, so
# `uv sync` provisions the full test/lint harness. Home Assistant is pinned to
# the 2025.1 series via `pytest-homeassistant-custom-component`, matching the
# `hacs.json` minimum. `oma-helen-cli` mirrors the exact `manifest.json` pin so
# the component is importable in tests.
[dependency-groups]
dev = [
    "homeassistant>=2025.1,<2025.2",
    "pytest-homeassistant-custom-component>=0.13.205,<0.14",
    "pytest>=8.3,<9",
    "ruff==0.15.20",
    "oma-helen-cli==1.8.0",
    "mypy>=2.1,<2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Put the repo root on sys.path so `custom_components` imports as a namespace
# package in tests, the same layout Home Assistant loads at runtime.
pythonpath = ["."]

[tool.mypy]
strict = true
# §1 names these explicitly; strict already implies warn_redundant_casts —
# kept written-out so the config reads as STACK.md §1 verbatim.
warn_unreachable = true
warn_redundant_casts = true

# helenservice (oma-helen-cli) ships no py.typed marker, so strict mode fails
# every import [import-untyped]. Decision (issue #32): silence at the import
# boundary; local .pyi stubs rejected (new maintained surface duplicating
# upstream, contra §2 "push fixes upstream") and follow_untyped_imports
# rejected by measurement (adds no-untyped-call at our call sites: 25 vs 23
# errors). Upstream py.typed request: tracked in issue #32 (filing it on the
# external repo needs the owner's own GitHub action; draft text is on record
# there).
[[tool.mypy.overrides]]
module = "helenservice.*"
ignore_missing_imports = true

# get_instance is the HA-idiomatic accessor, but recorder/__init__.py
# re-exports it from .util without __all__, tripping strict's
# no_implicit_reexport [attr-defined]. Trust the package's re-export rather
# than deviate from the idiomatic import path.
[[tool.mypy.overrides]]
module = "homeassistant.components.recorder"
implicit_reexport = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
